# trapezoid_transform

./: .gitignore  CMakeLists.txt  Constants.h  Geometry.cpp  Geometry.h  MaxInnerRect.cpp  MaxInnerRect.h  Point.h  Quadrilateral.cpp  Quadrilateral.h  RRLogger.h  build_android_so.sh  find_max_rect.cpp  find_max_rect.h  test.cc  test_eigen.cpp  test_find_max_rect.cpp  test_line.cpp  test_quad.cpp
